--- a/birch-artifact-grid-item.html
+++ b/birch-artifact-grid-item.html
@@ -1,7 +1,7 @@
-<link rel="import" href="../../components/polymer/polymer.html">
-<link rel="import" href="../../components/fs-card/fs-card.html">
-<link rel="import" href="../../components/wc-i18n/wc-i18n.html">
-<link rel="import" href="../../components/fs-behavior/fs-behavior.html">
+<link rel="import" href="../polymer/polymer.html">
+<link rel="import" href="../fs-card/fs-card.html">
+<link rel="import" href="../wc-i18n/wc-i18n.html">
+<link rel="import" href="../fs-behavior/fs-behavior.html">
 <link rel="import" href="audio-artifact/audio-artifact.html">
 <link rel="import" href="image-artifact/image-artifact.html">
 <link rel="import" href="story-artifact/story-artifact.html">
