Fixing all ../component paths

--- a/audio-artifact/audio-artifact.html
+++ b/audio-artifact/audio-artifact.html
@@ -1,5 +1,5 @@
-<link rel="import" href="../../../components/polymer/polymer.html">
-<link rel="import" href="../../../components/layout/layout.html">
+<link rel="import" href="../../polymer/polymer.html">
+<link rel="import" href="../../layout/layout.html">
 
 <dom-module id='audio-artifact'>
   <link rel="import" type="css" href="styles.css">
