--- a/birch-artifact-grid-item-preview.html
+++ b/birch-artifact-grid-item-preview.html
@@ -1,6 +1,6 @@
-<link rel="import" href="../../components/polymer/polymer.html">
-<link rel="import" href="../../components/wc-i18n/wc-i18n.html">
-<link rel="import" href="../../components/fs-behavior/fs-behavior.html">
+<link rel="import" href="../polymer/polymer.html">
+<link rel="import" href="../wc-i18n/wc-i18n.html">
+<link rel="import" href="../fs-behavior/fs-behavior.html">
 <link rel="import" href="./birch-artifact-grid-item.html">
 
 <dom-module id='birch-artifact-grid-item-preview'>
