--- a/image-artifact/image-artifact.html
+++ b/image-artifact/image-artifact.html
@@ -1,5 +1,5 @@
-<link rel="import" href="../../../components/polymer/polymer.html">
-<link rel="import" href="../../../components/iron-image/iron-image.html">
+<link rel="import" href="../../polymer/polymer.html">
+<link rel="import" href="../../iron-image/iron-image.html">
 
 <dom-module id='image-artifact'>
   <style>
