--- a/story-artifact/story-artifact.html
+++ b/story-artifact/story-artifact.html
@@ -1,5 +1,5 @@
-<link rel="import" href="../../../components/polymer/polymer.html">
-<link rel="import" href="../../../components/layout/layout.html">
+<link rel="import" href="../../polymer/polymer.html">
+<link rel="import" href="../../layout/layout.html">
 
 <dom-module id='story-artifact'>
   <link rel="import" type="css" href="styles.css">
@@ -33,9 +33,6 @@
         type: String,
         value: null
       }
-    },
-    ready: function() {
-      console.log('Woohoo!');
     }
   });
 })();
