--- a/birch-artifact-grid-item.html
+++ b/birch-artifact-grid-item.html
@@ -1,5 +1,5 @@
 <link rel="import" href="../polymer/polymer.html">
-<link rel="import" href="../fs-card/fs-card.html">
+<link rel="import" href="../cedar-card/cedar-card.html">
 <link rel="import" href="../wc-i18n/wc-i18n.html">
 <link rel="import" href="../oak-i18n-behavior/oak-i18n-behavior.html">
 <link rel="import" href="audio-artifact/audio-artifact.html">
@@ -12,7 +12,7 @@
   <link rel="import" type="css" href="birch-artifact-grid-item.css">
   <template>
     <wc-i18n-src locale='[[lang]]' locale-dir='[[localeDir()]]' domain='birch-artifact-grid-item'></wc-i18n-src>
-    <fs-card>
+    <cedar-card>
       <div class="relative">
         <div id='artifact' class="artifact">
 
@@ -51,7 +51,7 @@
         </div>
       </div>
 
-    </fs-card>
+    </cedar-card>
   </template>
 </dom-module>
 <script>
