--- a/birch-artifact-grid-item.html
+++ b/birch-artifact-grid-item.html
@@ -215,9 +215,7 @@
       if (!this.selectMode) e.stopPropagation();
     },
     _translateContributor: function(val) {
-      var string;
-      if (val) string = val.replace('{0}', '');
-      return string;
+      return (val) ? val.replace('{0}', '') : '';
     }
   });
 })();
