Added showMessages flag and message sections

--- a/birch-artifact-grid-item.html
+++ b/birch-artifact-grid-item.html
@@ -60,14 +60,45 @@
           </div>
         </template> 
 
-        <div class="error-uploading full layout horizontal end" hidden="[[!_isRestricted(data.screeningState)]]">
+        <!--Restricted-->
+        <div class="error-uploading full layout horizontal end" hidden="[[!_isProcessing('RESTRICTED', data.screeningState)]]">
           <div class="error-text">
             <span>
               <wc-i18n key='birch-artifact-grid-item.restricted'></wc-i18n>
             </span>
+          </div>
         </div>
-      </div>
 
+        <template is='dom-if' if='[[showMessages]]'>
+          <!--Processing-->
+          <div class="overlay" hidden="[[!_isProcessing('PROCESSING', data.screeningState)]]">
+            <div class='processing'>
+              <span>
+                <wc-i18n key='birch-artifact-grid-item.processing'></wc-i18n>
+              </span>
+            </div>
+          </div>
+
+          <!--Error Processing-->
+          <div class="error-uploading full layout horizontal end" hidden="[[!_isProcessing('FAILED', data.screeningState)]]">
+            <div class="error-text">
+              <span>
+                <wc-i18n key='birch-artifact-grid-item.processing_fail'></wc-i18n>
+              </span>
+            </div>
+          </div>
+
+          <!--Screening-->
+          <div class="overlay layout horizontal center center-justified" hidden="[[!_isProcessing('APPROVED', data.screeningState)]]">
+            <div class='processing '>
+                <i class='icon'></i>
+                <wc-i18n key='birch-artifact-grid-item.screening'></wc-i18n>
+
+            </div>
+          </div>
+        </template>
+
+      </div>
     </cedar-card>
   </template>
 </dom-module>
@@ -113,6 +144,10 @@
         value: false
       },
       showContributed: {
+        type: Boolean,
+        value: false
+      },
+      showMessages: {
         type: Boolean,
         value: false
       },
@@ -171,8 +206,9 @@
     _is: function(a, b) {
       return a == b;
     },
-    _isRestricted: function(screeningState) {
-      return screeningState === 'RESTRICTED';
+     _isProcessing: function(message, screeningState) {
+      if (message !== 'APPROVED') return screeningState === message;
+      return (screeningState !== 'APPROVED' && screeningState !== 'FAILED' && screeningState !== 'PROCESSING' && screeningState !== 'RESTRICTED')
     },
     _isImage: function(category) {
       if (!category) return true;
