Closing square brackets

--- a/birch-artifact-grid-item.html
+++ b/birch-artifact-grid-item.html
@@ -61,7 +61,7 @@
         </template> 
 
         <!--Restricted-->
-        <div class="restricted" hidden="[[!restricted">
+        <div class="restricted" hidden="[[!restricted]]">
             <wc-i18n class='fs-h5' key='birch-artifact-grid-item.restricted'></wc-i18n>
         </div>
 
