--- a/birch-artifact-grid-item.html
+++ b/birch-artifact-grid-item.html
@@ -67,7 +67,7 @@
 
         <template is='dom-if' if='[[showMessages]]'>
           <!-- Dim the thumbnail for error messages-->
-          <div class='overlay' hidden="[[!_displayMessage]]"></div>
+          <div class='overlay' hidden="[[!_displayMessage]]" on-tap='_goToItem'></div>
 
           <!--Uploading-->
           <div class="overlay layout horizontal center center-justified" hidden="[[!uploading]]" on-tap='_goToItem'>
@@ -84,7 +84,7 @@
           </div>
 
           <!--Error Processing-->
-          <div class="error-uploading full layout horizontal end" hidden="[[!processingFailed]]">
+          <div class="error-uploading full layout horizontal end" hidden="[[!processingFailed]]" on-tap='_goToItem'>
             <div class="error-text">
               <wc-i18n key='birch-artifact-grid-item.processing_fail'></wc-i18n>
             </div>
