Fire event when contrib name tap

--- a/birch-artifact-grid-item.html
+++ b/birch-artifact-grid-item.html
@@ -5,6 +5,7 @@
 <link rel="import" href="audio-artifact/audio-artifact.html">
 <link rel="import" href="image-artifact/image-artifact.html">
 <link rel="import" href="story-artifact/story-artifact.html">
+<link rel="import" href="../birch-contact-card/birch-contact-card.html">
 
 <!-- @demo demo/index.html -->
 
@@ -55,7 +56,7 @@
               </a>
             </div>
             <div class="contributor" title='[[data.ftUserInfo.contactName]]'>
-               <span>[[_translateContributor(_contributedBy)]]</span><span class='contributor-name'>[[data.ftUserInfo.contactName]]</span>
+               <span>[[_translateContributor(_contributedBy)]]</span><span class='contributor-name' on-tap='_openContactCard'>[[data.ftUserInfo.contactName]]</span>
             </div>
           </div>
         </template> 
@@ -307,6 +308,12 @@
     },
     _stopProp: function(e) {
       if (!this.selectMode) e.stopPropagation();
+    },
+    _openContactCard: function(e) {
+      e.stopPropagation();
+      this.fire('gallery-close-contact-card',{});
+      var contactData = {'event': e, 'data': this.data.ftUserInfo }
+      this.fire('gallery-open-contact-card', contactData);
     },
     _translateContributor: function(val) {
       return (val) ? val.replace('{0}', '') : '';
