Center error message and fit message in mobile

--- a/birch-artifact-grid-item.html
+++ b/birch-artifact-grid-item.html
@@ -84,7 +84,7 @@
           </div>
 
           <!--Error Processing-->
-          <div class="error-uploading full layout horizontal end" hidden="[[!processingFailed]]" on-tap='_goToItem'>
+          <div class="error-processing overlay layout horizontal center center-justified" hidden="[[!processingFailed]]" on-tap='_goToItem'>
             <div class="error-text">
               <wc-i18n key='birch-artifact-grid-item.processing_fail'></wc-i18n>
             </div>
