Add fs-styles to the item and item preview

--- a/birch-artifact-grid-item-preview.html
+++ b/birch-artifact-grid-item-preview.html
@@ -2,8 +2,10 @@
 <link rel="import" href="../wc-i18n/wc-i18n.html">
 <link rel="import" href="../oak-i18n-behavior/oak-i18n-behavior.html">
 <link rel="import" href="./birch-artifact-grid-item.html">
+<link rel="import" href="../fs-styles/fs-styles.html">
 
 <dom-module id='birch-artifact-grid-item-preview'>
+  <style include='fs-styles'></style>
   <link rel="import" type="css" href="birch-artifact-grid-item-preview.css">
   <template>
     <div class="relative">
