--- a/birch-artifact-grid-item.html
+++ b/birch-artifact-grid-item.html
@@ -5,10 +5,12 @@
 <link rel="import" href="audio-artifact/audio-artifact.html">
 <link rel="import" href="image-artifact/image-artifact.html">
 <link rel="import" href="story-artifact/story-artifact.html">
+<link rel="import" href="../fs-styles/fs-styles.html">
 
 <!-- @demo demo/index.html -->
 
 <dom-module id='birch-artifact-grid-item'>
+  <style include='fs-styles'></style>
   <link rel="import" type="css" href="birch-artifact-grid-item.css">
   <template>
     <wc-i18n-src locale='[[lang]]' locale-dir='[[localeDir()]]' domain='birch-artifact-grid-item'></wc-i18n-src>
