Replace upload failed message and add check for mp3Error

--- a/birch-artifact-grid-item-preview.html
+++ b/birch-artifact-grid-item-preview.html
@@ -16,7 +16,7 @@
       <div class="error-uploading full layout horizontal end" hidden="[[!data.uploadError]]">
         <div class="error-text" hidden="[[!data.failure]]">
           <span>
-            <wc-i18n key='birch-artifact-grid-item-preview.failure'></wc-i18n>
+            <wc-i18n key='birch-artifact-grid-item-preview.try_again'></wc-i18n>
           </span>
           <!-- <a href="javascript:;" on-tap="_retryUpload">
             <wc-i18n key='birch-artifact-grid-item-preview.retry'></wc-i18n>
@@ -37,7 +37,14 @@
             <wc-i18n key='birch-artifact-grid-item-preview.unsupported'></wc-i18n>
           </span>
         </div>
+        <div class="error-text" hidden="[[!data.mp3Error]]">
+          <span>
+            <wc-i18n key='birch-artifact-grid-item-preview.fail_continues'></wc-i18n>
+          </span>
+        </div>
       </div>
+      
+      
       <div id="memory-title" hidden="[[!data.uploadError]]"></div>
     </div>
     </div>
@@ -145,7 +152,7 @@
         case 409:   this.set('data.duplicate', true);     break;
         case 413:   this.set('data.tooBig', true);        break;
         case 415:   this.set('data.unsupported', true);   break;
-        case 422:   this.set('data.unsupported', true);   break;
+        case 422:   this.set('data.mp3Error', true);   break;
         default:    this.set('data.failure', true);       break;
       }
       this.loading = false;
